# Echofoam-Falsifiability-suite

./: .gitignore  GAME_DESIGN.md  LICENSE  README.md  blockchain_memory.py  data_management.py  environment.yml  epcd_console.py  laser_filamentation.py  melodys_art_echo.py  prime Number Sieve  setup.py  simulation.py  simulation_3d.py  simulation_gui.py  sitecustomize.py  teleportation.py  tension_game.py  weather_simulation.py
adaptive_gui/: adaptive_gui.py
docs/: game_engine.md
echofoam_falsifiability/: __init__.py
src/: laser_filamentation.py  simulation.py  teleportation.py  weather_simulation.py
src/echofoam_falsifiability/: __init__.py  adaptive_gui.py  laser_filamentation.py  mashup_maker.py.py  simulation.py  teleportation.py  weather_simulation.py  weather_sphere.py
teleportation/: teleportation.py
tests/: CITATION.cff  environment.yml  pyproject.toml  sitecustomize.py  test_blockchain_memory.py  test_simulations.py
